--- a/space-tourism-website-main/space-tourism-website-main/starter-code/destination-moon.html
+++ b/space-tourism-website-main/space-tourism-website-main/starter-code/destination-moon.html
@@ -8,33 +8,60 @@
   <link rel="images" href="./assets/">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
+<body background="/space-tourism-website-main/space-tourism-website-main/starter-code/assets/destination/background-destination-mobile.jpg">
+  <header>
+    <ul class="head_head">
+      <li><img src="./assets/shared/logo.svg" alt="logo"></li>
+      <li><img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger"></li>
+      <!-- <li><img src="./assets/shared/icon-close.svg" alt="icon-close"></li> -->
+    </ul>
+  </header>
+  <main class="container">
+    <section>
+      <div class="hero">
+        <div class="hero-p">
+          <p class="hero-p1">01</p>
+          <p>PICK YOUR DESTINATION</p>
+        </div>
+        <div class="hero-img">   
+          <img src="./assets/destination/image-moon.png">
+        </div>
+        <div>
+          <ul class="hero-list">
+            <li class="hero-list1">MOON</li>
+            <li>MARS</li>
+            <li>EUROPA</li>
+            <li>TITAN</li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
-  <!-- 00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+    <section>
+      <div class="section-2">
+        <div class="section-2-p">
+          <p>MOON</p>
+        </div>
+        <div class="section-2-p1">
+          <p>
+            See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.
+          </p>
+        </div>
+      </div>
+    </section>
 
-  01 Pick your destination
-
-  Moon
-  Mars
-  Europa
-  Titan
-
-  Moon
-
-  See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
-  regain perspective and come back refreshed. While you’re there, take in some history 
-  by visiting the Luna 2 and Apollo 11 landing sites.
-
-  Avg. distance
-  384,400 km
-
-  Est. travel time
-  3 days -->
-  <section>
-    
-  </section>
+    <section>
+      <div class="section-3">
+        <div class="section-3-p">
+          <p class="section-3-p1">AVG. DISTANCE</p>
+          <p class="section-3-p2">384,400 km</p>
+        </div>
+        <div class="section-3-sub">
+          <p class="section-3-p1">EST. TRAVEL TIME</p>
+          <p class="section-3-p2">3 days</p>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
