--- a/space-tourism-website-main/space-tourism-website-main/starter-code/crew-commander.html
+++ b/space-tourism-website-main/space-tourism-website-main/starter-code/crew-commander.html
@@ -3,25 +3,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="/space-tourism-website-main/space-tourism-website-main/styles/crew_commander_mobile.css">
+  <link rel="images" href="./assets/">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
+<body background="/space-tourism-website-main/space-tourism-website-main/starter-code/assets/crew/background-crew-mobile.jpg">
+  <header>
+    <ul class="head_head">
+      <li><img src="./assets/shared/logo.svg" alt="logo"></li>
+      <li><img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger"></li>
+      <!-- <li><img src="./assets/shared/icon-close.svg" alt="icon-close"></li> -->
+    </ul>
+  </header>
+  <main class="container">
+    <section>
+      <div class="hero">
+        <div class="hero-p">
+          <p class="hero-p1">02</p>
+          <p>MEET YOUR CREW</p>
+        </div>
+        <div class="hero-img">   
+          <img src="./assets/crew/image-douglas-hurley.png">
+        </div>
+    </section>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
-  02 Meet your crew
-
-  Commander
-  Douglas Hurley
-
-  Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
-  and former NASA astronaut. He launched into space for the third time as 
-  commander of Crew Dragon Demo-2.
+    <section>
+      <div class="section-2">
+        <div class="section-2-sub">
+          <div class="section-2-svg">
+            <svg xmlns="http://www.w3.org/2000/svg" width="88" height="10" viewBox="0 0 88 10" fill="none">
+              <circle cx="5" cy="5" r="5" fill="white"/>
+              <circle opacity="0.174363" cx="31" cy="5" r="5" fill="white"/>
+              <circle opacity="0.174363" cx="57" cy="5" r="5" fill="white"/>
+              <circle opacity="0.174363" cx="83" cy="5" r="5" fill="white"/>
+            </svg>
+          </div>
+        </div>
+        <div class="section-2-sub1">
+          <div class="section-2-sub1-p">
+            <p class="section-2-sub1-p1">COMMANDER</p>
+            <p class="section-2-sub1-p2">DOUGLAS HURLEY</p>
+          </div>
+          <div>
+            <p class="section-2-sub1-p3">
+              Douglas Gerald Hurley is an American engineer, former Marine Corps pilot and former NASA astronaut. He launched into space for the third time as commander of Crew Dragon Demo-2.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
