--- a/space-tourism-website-main/space-tourism-website-main/starter-code/technology-spaceport.html
+++ b/space-tourism-website-main/space-tourism-website-main/starter-code/technology-spaceport.html
@@ -3,30 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="/space-tourism-website-main/space-tourism-website-main/styles/technology_spaceport.css">
+  <link rel="images" href="./assets/">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
+<body background="/space-tourism-website-main/space-tourism-website-main/starter-code/assets/technology/background-technology-mobile.jpg">
+  <header>
+    <ul class="head_head">
+      <li><img src="./assets/shared/logo.svg" alt="logo"></li>
+      <li><img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger"></li>
+      <!-- <li><img src="./assets/shared/icon-close.svg" alt="icon-close"></li> -->
+    </ul>
+  </header>
+  <main class="container">
+    <section class="section-marg">
+      <div class="hero">
+        <div class="hero-p">
+          <p class="hero-p1">03</p>
+          <p>SPACE LAUNCH 101</p>
+        </div>
+        <div class="hero-img">   
+          <img src="./assets/technology/image-spaceport-landscape.jpg">
+        </div>
+    </section>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
-  03 Space launch 101
-
-  1
-  2
-  3
-
-  The terminology...
-  Spaceport
-
-  A spaceport or cosmodrome is a site for launching (or receiving) spacecraft, 
-  by analogy to the seaport for ships or airport for aircraft. Based in the 
-  famous Cape Canaveral, our spaceport is ideally situated to take advantage 
-  of the Earth’s rotation for launch.
+    <section>
+      <div class="section-2">
+        <div class="section-2-flex">
+          <div class="section-2-sub section-2-sub0 ">
+            <p>1</p>
+          </div>
+          <div class="section-2-sub">
+            <p>2</p>
+          </div>
+          <div class="section-2-sub section-2-sub0 ">
+            <p>3</p>
+          </div>
+        </div>
+        <div class="section-2-sub1">
+          <div class="section-2-sub1-p">
+            <p class="section-2-sub1-p1">THE TERMINOLOGY…</p>
+            <p class="section-2-sub1-p2">SPACEPORT</p>
+          </div>
+          <div>
+            <p class="section-2-sub1-p3">
+              A spaceport or cosmodrome is a site for launching (or receiving) spacecraft, by analogy to the seaport for ships or airport for aircraft. Based in the famous Cape Canaveral, our spaceport is ideally situated to take advantage of the Earth’s rotation for launch.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
