--- a/space-tourism-website-main/space-tourism-website-main/starter-code/destination-europa.html
+++ b/space-tourism-website-main/space-tourism-website-main/starter-code/destination-europa.html
@@ -3,36 +3,65 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="/space-tourism-website-main/space-tourism-website-main/styles/destination_europa.css">
+  <link rel="images" href="./assets/">
   <title>Frontend Mentor | Space tourism website</title>
-</head>
-<body>
+</head> 
+<body background="/space-tourism-website-main/space-tourism-website-main/starter-code/assets/destination/background-destination-mobile.jpg">
+  <header>
+    <ul class="head_head">
+      <li><img src="./assets/shared/logo.svg" alt="logo"></li>
+      <li><img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger"></li>
+      <!-- <li><img src="./assets/shared/icon-close.svg" alt="icon-close"></li> -->
+    </ul>
+  </header>
+  <main class="container">
+    <section>
+      <div class="hero">
+        <div class="hero-p">
+          <p class="hero-p1">01</p>
+          <p>PICK YOUR DESTINATION</p>
+        </div>
+        <div class="hero-img">   
+          <img src="./assets/destination/image-europa.png">
+        </div>
+        <div>
+          <ul class="hero-list">
+            <li>MOON</li>
+            <li>MARS</li>
+            <li class="hero-list1">EUROPA</li>
+            <li>TITAN</li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+    <section>
+      <div class="section-2">
+        <div class="section-2-p">
+          <p>EUROPA</p>
+        </div>
+        <div class="section-2-p1">
+          <p>
+            The smallest of the four Galilean moons orbiting Jupiter, Europa is a winter lover’s dream. With an icy surface, it’s perfect for a bit of ice skating, curling, hockey, or simple relaxation in your snug wintery cabin.
+          </p>
+        </div>
+      </div>
+    </section>
 
-  01 Pick your destination
-
-  Moon
-  Mars
-  Europa
-  Titan
-
-  Europa
-
-  The smallest of the four Galilean moons orbiting Jupiter, Europa is a 
-  winter lover’s dream. With an icy surface, it’s perfect for a bit of 
-  ice skating, curling, hockey, or simple relaxation in your snug 
-  wintery cabin.
-
-  Avg. distance
-  628 mil. km
-
-  Est. travel time
-  3 years
+    <section>
+      <div class="section-3">
+        <div class="section-3-p">
+          <p class="section-3-p1">AVG. DISTANCE</p>
+          <p class="section-3-p2">628 MIL. KM</p>
+        </div>
+        <div class="section-3-sub">
+          <p class="section-3-p1">EST. TRAVEL TIME</p>
+          <p class="section-3-p2">3 YEARS</p>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
