--- a/space-tourism-website-main/space-tourism-website-main/starter-code/technology-capsule.html
+++ b/space-tourism-website-main/space-tourism-website-main/starter-code/technology-capsule.html
@@ -3,30 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="/space-tourism-website-main/space-tourism-website-main/styles/technology_capsule.css">
+  <link rel="images" href="./assets/">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
+<body background="/space-tourism-website-main/space-tourism-website-main/starter-code/assets/technology/background-technology-mobile.jpg">
+  <header>
+    <ul class="head_head">
+      <li><img src="./assets/shared/logo.svg" alt="logo"></li>
+      <li><img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger"></li>
+      <!-- <li><img src="./assets/shared/icon-close.svg" alt="icon-close"></li> -->
+    </ul>
+  </header>
+  <main class="container">
+    <section class="section-marg">
+      <div class="hero">
+        <div class="hero-p">
+          <p class="hero-p1">03</p>
+          <p>SPACE LAUNCH 101</p>
+        </div>
+        <div class="hero-img">   
+          <img src="./assets/technology/image-space-capsule-landscape.jpg">
+        </div>
+    </section>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
-  03 Space launch 101
-
-  1
-  2
-  3
-
-  The terminology...
-  Space capsule
-
-  A space capsule is an often-crewed spacecraft that uses a blunt-body reentry 
-  capsule to reenter the Earth's atmosphere without wings. Our capsule is where 
-  you'll spend your time during the flight. It includes a space gym, cinema, 
-  and plenty of other activities to keep you entertained.
+    <section>
+      <div class="section-2">
+        <div class="section-2-flex">
+          <div class="section-2-sub section-2-sub0 ">
+            <p>1</p>
+          </div>
+          <div class="section-2-sub section-2-sub0">
+            <p>2</p>
+          </div>
+          <div class="section-2-sub ">
+            <p>3</p>
+          </div>
+        </div>
+        <div class="section-2-sub1">
+          <div class="section-2-sub1-p">
+            <p class="section-2-sub1-p1">THE TERMINOLOGY…</p>
+            <p class="section-2-sub1-p2">SPACE CAPSULE</p>
+          </div>
+          <div>
+            <p class="section-2-sub1-p3">
+              A space capsule is an often-crewed spacecraft that uses a blunt-body reentry capsule to reenter the Earth's atmosphere without wings. Our capsule is where you'll spend your time during the flight. It includes a space gym, cinema, and plenty of other activities to keep you entertained.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
