destination titan mobile version done

--- a/space-tourism-website-main/space-tourism-website-main/starter-code/destination-moon.html
+++ b/space-tourism-website-main/space-tourism-website-main/starter-code/destination-moon.html
@@ -54,7 +54,7 @@
       <div class="section-3">
         <div class="section-3-p">
           <p class="section-3-p1">AVG. DISTANCE</p>
-          <p class="section-3-p2">384,400 km</p>
+          <p class="section-3-p2">384,400 KM</p>
         </div>
         <div class="section-3-sub">
           <p class="section-3-p1">EST. TRAVEL TIME</p>
