--- a/space-tourism-website-main/space-tourism-website-main/starter-code/destination-titan.html
+++ b/space-tourism-website-main/space-tourism-website-main/starter-code/destination-titan.html
@@ -3,35 +3,65 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="/space-tourism-website-main/space-tourism-website-main/styles/destination_titan.css">
+  <link rel="images" href="./assets/">
   <title>Frontend Mentor | Space tourism website</title>
-</head>
-<body>
+</head> 
+<body background="/space-tourism-website-main/space-tourism-website-main/starter-code/assets/destination/background-destination-mobile.jpg">
+  <header>
+    <ul class="head_head">
+      <li><img src="./assets/shared/logo.svg" alt="logo"></li>
+      <li><img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger"></li>
+      <!-- <li><img src="./assets/shared/icon-close.svg" alt="icon-close"></li> -->
+    </ul>
+  </header>
+  <main class="container">
+    <section>
+      <div class="hero">
+        <div class="hero-p">
+          <p class="hero-p1">01</p>
+          <p>PICK YOUR DESTINATION</p>
+        </div>
+        <div class="hero-img">   
+          <img src="./assets/destination/image-titan.png">
+        </div>
+        <div>
+          <ul class="hero-list">
+            <li>MOON</li>
+            <li>MARS</li>
+            <li>EUROPA</li>
+            <li class="hero-list1">TITAN</li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+    <section>
+      <div class="section-2">
+        <div class="section-2-p">
+          <p>TITAN</p>
+        </div>
+        <div class="section-2-p1">
+          <p>
+            The only moon known to have a dense atmosphere other than Earth, Titan is a home away from home (just a few hundred degrees colder!). As a bonus, you get striking views of the Rings of Saturn.
+          </p>
+        </div>
+      </div>
+    </section>
 
-  01 Pick your destination
-
-  Moon
-  Mars
-  Europa
-  Titan
-
-  Titan
-
-  The only moon known to have a dense atmosphere other than Earth, Titan 
-  is a home away from home (just a few hundred degrees colder!). As a 
-  bonus, you get striking views of the Rings of Saturn.
-
-  Avg. distance
-  1.6 bil. km
-
-  Est. travel time
-  7 years
+    <section>
+      <div class="section-3">
+        <div class="section-3-p">
+          <p class="section-3-p1">AVG. DISTANCE</p>
+          <p class="section-3-p2">1.6 BIL. KM</p>
+        </div>
+        <div class="section-3-sub">
+          <p class="section-3-p1">EST. TRAVEL TIME</p>
+          <p class="section-3-p2">7 YEARS</p>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
