tablet responsiveness crew

--- a/space-tourism-website-main/space-tourism-website-main/starter-code/crew-engineer.html
+++ b/space-tourism-website-main/space-tourism-website-main/starter-code/crew-engineer.html
@@ -8,7 +8,9 @@
   <link rel="images" href="./assets/">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body background="/space-tourism-website-main/space-tourism-website-main/starter-code/assets/crew/background-crew-mobile.jpg">
+<!-- <body background="/space-tourism-website-main/space-tourism-website-main/starter-code/assets/crew/background-crew-mobile.jpg"> -->
+<body>
+  <img src="./assets/crew/background-crew-mobile.jpg" alt="bacground_crew_mobile" class="body_img">
   <header>
     <ul class="head_head">
       <li><img src="./assets/shared/logo.svg" alt="logo"></li>
