--- a/space-tourism-website-main/space-tourism-website-main/starter-code/index.html
+++ b/space-tourism-website-main/space-tourism-website-main/starter-code/index.html
@@ -8,26 +8,25 @@
   <link rel="stylesheet" href="/space-tourism-website-main/space-tourism-website-main/styles/style.css">
   <link rel="images" href="./assets/">
 </head>
-<body background="/space-tourism-website-main/space-tourism-website-main/starter-code/assets/home/background-home-mobile.jpg">
-
-  <!-- 00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
-  So, you want to travel to
-  Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to 
-  outer space and not hover kind of on the edge of it. Well sit back, and relax 
-  because we’ll give you a truly out of this world experience!
-
-  Explore -->
+<body>
+  <img src="./assets/home/background-home-mobile.jpg" alt="bacground_home_mobile" class="body_img">
   <header>
-    <ul class="head_head">
+    <nav class="head_head">
+      <img src="./assets/shared/logo.svg" alt="logo">
+      <ul class="nav-ul">
+        <li><a>HOME</a></li>
+        <li><a>DESTINATION</a></li>
+        <li><a>CREW</a></li>
+        <li><a>TECHNOLOGY</a></li>
+      </ul>
+      
+      <img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
+    </nav>
+    <!-- <ul class="head_head">
       <li><img src="./assets/shared/logo.svg" alt="logo"></li>
-      <li><img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger"></li>
-      <!-- <li><img src="./assets/shared/icon-close.svg" alt="icon-close"></li> -->
-    </ul>
+      <li><img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu"></li>
+      <li><img src="./assets/shared/icon-close.svg" alt="icon-close"></li>
+    </ul> -->
   </header>
   <main class="container">
 
@@ -57,7 +56,6 @@
       </div>
     </section>
   </main>
-
-
+  <script src="/space-tourism-website-main/space-tourism-website-main/script/index.js"></script>
 </body>
 </html>
