--- a/space-tourism-website-main/space-tourism-website-main/starter-code/destination-moon.html
+++ b/space-tourism-website-main/space-tourism-website-main/starter-code/destination-moon.html
@@ -8,7 +8,8 @@
   <link rel="images" href="./assets/">
   <title>Frontend Mentor | Space tourism website</title>
 </head> 
-<body background="/space-tourism-website-main/space-tourism-website-main/starter-code/assets/destination/background-destination-mobile.jpg">
+<body>
+  <img src="./assets/destination/background-destination-mobile.jpg" alt="bacground_destination_mobile" class="body_img">
   <header>
     <ul class="head_head">
       <li><img src="./assets/shared/logo.svg" alt="logo"></li>
