--- a/space-tourism-website-main/space-tourism-website-main/starter-code/technology-vehicle.html
+++ b/space-tourism-website-main/space-tourism-website-main/starter-code/technology-vehicle.html
@@ -8,7 +8,8 @@
   <link rel="images" href="./assets/">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body background="/space-tourism-website-main/space-tourism-website-main/starter-code/assets/technology/background-technology-mobile.jpg">
+<body>
+  <img src="./assets/technology/background-technology-mobile.jpg" alt="bacground_technology_mobile" class="body_img">
   <header>
     <ul class="head_head">
       <li><img src="./assets/shared/logo.svg" alt="logo"></li>
