tablet responsive destination moon

--- a/space-tourism-website-main/space-tourism-website-main/starter-code/destination-moon.html
+++ b/space-tourism-website-main/space-tourism-website-main/starter-code/destination-moon.html
@@ -11,11 +11,17 @@
 <body>
   <img src="./assets/destination/background-destination-mobile.jpg" alt="bacground_destination_mobile" class="body_img">
   <header>
-    <ul class="head_head">
-      <li><img src="./assets/shared/logo.svg" alt="logo"></li>
-      <li><img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger"></li>
-      <!-- <li><img src="./assets/shared/icon-close.svg" alt="icon-close"></li> -->
-    </ul>
+    <nav class="head_head">
+      <img src="./assets/shared/logo.svg" alt="logo">
+      <ul class="nav-ul">
+        <li><a>HOME</a></li>
+        <li><a>DESTINATION</a></li>
+        <li><a>CREW</a></li>
+        <li><a>TECHNOLOGY</a></li>
+      </ul>
+      
+      <img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
+    </nav>
   </header>
   <main class="container">
     <section>
@@ -59,7 +65,7 @@
         </div>
         <div class="section-3-sub">
           <p class="section-3-p1">EST. TRAVEL TIME</p>
-          <p class="section-3-p2">3 days</p>
+          <p class="section-3-p2">3 DAYS<p>
         </div>
       </div>
     </section>
