--- a/space-tourism-website-main/space-tourism-website-main/starter-code/crew-pilot.html
+++ b/space-tourism-website-main/space-tourism-website-main/starter-code/crew-pilot.html
@@ -11,11 +11,16 @@
 <body>
   <img src="./assets/crew/background-crew-mobile.jpg" alt="bacground_crew_mobile" class="body_img">
   <header>
-    <ul class="head_head">
-      <li><img src="./assets/shared/logo.svg" alt="logo"></li>
-      <li><img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger"></li>
-      <!-- <li><img src="./assets/shared/icon-close.svg" alt="icon-close"></li> -->
-    </ul>
+    <nav class="head_head">
+      <img src="./assets/shared/logo.svg" alt="logo">
+      <ul class="nav-ul">
+        <li><a>HOME</a></li>
+        <li><a>DESTINATION</a></li>
+        <li><a>CREW</a></li>
+        <li><a>TECHNOLOGY</a></li>
+      </ul>
+      <img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
+    </nav>
   </header>
   <main class="container">
     <section>
