--- a/starter-code/crew-commander.html
+++ b/starter-code/crew-commander.html
@@ -9,7 +9,11 @@
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
-  <img src="./assets/crew/background-crew-mobile.jpg" alt="bacground_crew_mobile" class="body_img">
+  <picture>
+    <source media="(min-width:768px)" srcset="./assets/crew/background-crew-tablet.jpg" class="body_img">
+    <source media="(min-width:992px)" srcset="./assets/crew/background-crew-desktop.jpg" class="body_img">
+    <img src="./assets/crew/background-crew-mobile.jpg" alt="bacground_crew_mobile" class="body_img">
+  </picture>
   <header>
     <nav class="head_head">
       <img src="./assets/shared/logo.svg" alt="logo">
