--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <title>Frontend Mentor | Space tourism website</title>
-  <link rel="stylesheet" href="/space-tourism-website-main/space-tourism-website-main/styles/style.css">
+  <link rel="stylesheet" href="/styles/style.css">
   <link rel="images" href="./assets/">
 </head>
 <body>
