--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <nav class="head_head">
       <img src="./starter-code/assets/shared/logo.svg" alt="logo">
       <ul class="nav-ul">
-        <li><a>HOME</a></li>
-        <li><a>DESTINATION</a></li>
-        <li><a>CREW</a></li>
-        <li><a>TECHNOLOGY</a></li>
+        <li><a href="./index.html">HOME</a></li>
+        <li><a href="./starter-code/destination-moon.html">DESTINATION</a></li>
+        <li><a href="./starter-code/crew-commander.html">CREW</a></li>
+        <li><a href="./starter-code/technology-vehicle.html">TECHNOLOGY</a></li>
       </ul>
       
       <img src="./starter-code/assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
