--- a/starter-code/crew-commander.html
+++ b/starter-code/crew-commander.html
@@ -3,27 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/space-tourism-website-main/space-tourism-website-main/styles/crew_commander_mobile.css">
-  <link rel="images" href="./assets/">
+  <link rel="icon" type="image/png" sizes="32x32" href="./starter-code/assets/favicon-32x32.png">
+  <link rel="stylesheet" href="/styles/crew_commander_mobile.css">
+  <link rel="images" href="./starter-code/assets/">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
-  <picture>
-    <source media="(min-width:768px)" srcset="./assets/crew/background-crew-tablet.jpg" class="body_img">
-    <source media="(min-width:992px)" srcset="./assets/crew/background-crew-desktop.jpg" class="body_img">
-    <img src="./assets/crew/background-crew-mobile.jpg" alt="bacground_crew_mobile" class="body_img">
-  </picture>
+  <!-- <picture>
+    <source media="(min-width:768px)" srcset="./starter-code/assets/crew/background-crew-tablet.jpg" class="body_img">
+    <source media="(min-width:992px)" srcset="./starter-code/assets/crew/background-crew-desktop.jpg" class="body_img">
+    <img src="/starter-code/assets/crew/background-crew-mobile.jpg" alt="bacground_crew_mobile" class="body_img">
+  </picture> -->
   <header>
     <nav class="head_head">
-      <img src="./assets/shared/logo.svg" alt="logo">
+      <img src="./starter-code/assets/shared/logo.svg" alt="logo">
       <ul class="nav-ul">
-        <li><a>HOME</a></li>
-        <li><a>DESTINATION</a></li>
-        <li><a>CREW</a></li>
-        <li><a>TECHNOLOGY</a></li>
+        <li><a href="./index.html">HOME</a></li>
+        <li><a href="./starter-code/destination-moon.html">DESTINATION</a></li>
+        <li><a href="./starter-code/crew-commander.html">CREW</a></li>
+        <li><a href="./starter-code/technology-vehicle.html">TECHNOLOGY</a></li>
       </ul>
-      <img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
+      <img src="./starter-code/assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
     </nav>
   </header>
   <main class="container">
@@ -34,7 +34,7 @@
           <p>MEET YOUR CREW</p>
         </div>
         <div class="hero-img">   
-          <img src="./assets/crew/image-douglas-hurley.png">
+          <img src="./starter-code/assets/crew/image-douglas-hurley.png">
         </div>
     </section>
 
