--- a/starter-code/destination-moon.html
+++ b/starter-code/destination-moon.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/space-tourism-website-main/space-tourism-website-main/styles/destination_moon.css">
-  <link rel="images" href="./assets/">
+  <link rel="icon" type="image/png" sizes="32x32" href=".starter-code/assets/favicon-32x32.png">
+  <link rel="stylesheet" href="/styles/destination_moon.css">
+  <link rel="images" href="./starter-code/assets/">
   <title>Frontend Mentor | Space tourism website</title>
 </head> 
 <body>
