--- a/starter-code/destination-moon.html
+++ b/starter-code/destination-moon.html
@@ -10,21 +10,23 @@
 </head> 
 <body>
   <picture>
-    <source media="(min-width:768px)" srcset="./assets/destination/background-destination-tablet.jpg" class="body_img">
-    <source media="(min-width:992px)" srcset="./assets/destination/background-destination-desktop.jpg">
-    <img src="./assets/destination/background-destination-mobile.jpg" alt="bacground_destination_mobile" class="body_img">
+    <source media="(min-width:768px)" srcset="./starter-code/assets/destination/background-destination-tablet.jpg" class="body_img">
+    <source media="(min-width:992px)" srcset="./starter-code/assets/destination/background-destination-desktop.jpg">
+    <img src="./starter-code/assets/destination/background-destination-mobile.jpg" alt="bacground_destination_mobile" class="body_img">
   </picture>
   <header>
     <nav class="head_head">
-      <img src="./assets/shared/logo.svg" alt="logo">
+      <img src="./starter-code/assets/shared/logo.svg" alt="logo">
       <ul class="nav-ul">
-        <li><a>HOME</a></li>
-        <li><a>DESTINATION</a></li>
-        <li><a>CREW</a></li>
-        <li><a>TECHNOLOGY</a></li>
+        <ul class="nav-ul">
+          <li><a href="./index.html">HOME</a></li>
+          <li><a href="./starter-code/destination-moon.html">DESTINATION</a></li>
+          <li><a href="./starter-code/crew-commander.html">CREW</a></li>
+          <li><a href="./starter-code/technology-vehicle.html">TECHNOLOGY</a></li>
+        </ul>
       </ul>
       
-      <img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
+      <img src="./starter-code/assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
     </nav>
   </header>
   <main class="container">
@@ -35,7 +37,7 @@
           <p>PICK YOUR DESTINATION</p>
         </div>
         <div class="hero-img">   
-          <img src="./assets/destination/image-moon.png">
+          <img src="./starter-code/assets/destination/image-moon.png">
         </div>
       </div>
     </section>
