--- a/pages/destination/destination-moon.html
+++ b/pages/destination/destination-moon.html
@@ -5,28 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href=".starter-code/assets/favicon-32x32.png">
   <link rel="stylesheet" href="/styles/destination_moon.css">
-  <link rel="images" href="./starter-code/assets/">
+  <link rel="images" href="/starter-code/assets/">
   <title>Frontend Mentor | Space tourism website</title>
 </head> 
 <body>
   <picture>
-    <source media="(min-width:768px)" srcset="./starter-code/assets/destination/background-destination-tablet.jpg" class="body_img">
-    <source media="(min-width:992px)" srcset="./starter-code/assets/destination/background-destination-desktop.jpg">
-    <img src="./starter-code/assets/destination/background-destination-mobile.jpg" alt="bacground_destination_mobile" class="body_img">
+    <source media="(min-width:768px)" srcset="/assets/destination/background-destination-tablet.jpg" class="body_img">
+    <source media="(min-width:992px)" srcset="/assets/destination/background-destination-desktop.jpg">
+    <img src="/assets/destination/background-destination-mobile.jpg" alt="bacground_destination_mobile" class="body_img">
   </picture>
   <header>
     <nav class="head_head">
-      <img src="./starter-code/assets/shared/logo.svg" alt="logo">
+      <img src="/assets/shared/logo.svg" alt="logo">
       <ul class="nav-ul">
-        <ul class="nav-ul">
-          <li><a href="./index.html">HOME</a></li>
-          <li><a href="./starter-code/destination-moon.html">DESTINATION</a></li>
-          <li><a href="./starter-code/crew-commander.html">CREW</a></li>
-          <li><a href="./starter-code/technology-vehicle.html">TECHNOLOGY</a></li>
-        </ul>
+        <li><a  href="/index.html">HOME</a></li>
+        <li><a>DESTINATION</a></li>
+        <li><a>CREW</a></li>
+        <li><a>TECHNOLOGY</a></li>
       </ul>
       
-      <img src="./starter-code/assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
+      <img src="/assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
     </nav>
   </header>
   <main class="container">
@@ -37,7 +35,7 @@
           <p>PICK YOUR DESTINATION</p>
         </div>
         <div class="hero-img">   
-          <img src="./starter-code/assets/destination/image-moon.png">
+          <img src="/assets/destination/image-moon.png">
         </div>
       </div>
     </section>
