--- a/index.html
+++ b/index.html
@@ -3,28 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./starter-code/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
   <title>Frontend Mentor | Space tourism website</title>
   <link rel="stylesheet" href="/styles/style.css">
-  <link rel="images" href=".starter-code/assets/">
 </head>
 <body>
   <picture>
-    <source media="(min-width:768px)" srcset="./starter-code/assets/home/background-home-desktop.jpg" class="body_img">
-    <source media="(min-width:992px)" srcset="./starter-code/assets/crew/background-crew-tablet.jpg">
-    <img src="./starter-code/assets/home/background-home-mobile.jpg" alt="bacground_home_mobile" class="body_img">
+    <source media="(min-width:768px)" srcset="/assets/home/background-home-desktop.jpg" class="body_img">
+    <source media="(min-width:992px)" srcset="/assets/crew/background-crew-tablet.jpg">
+    <img src="/assets/home/background-home-mobile.jpg" alt="bacground_home_mobile" class="body_img">
   </picture>
   <header>
     <nav class="head_head">
-      <img src="./starter-code/assets/shared/logo.svg" alt="logo">
+      <img src="/assets/shared/logo.svg" alt="logo">
       <ul class="nav-ul">
-        <li><a href="./index.html">HOME</a></li>
-        <li><a href="./starter-code/destination-moon.html">DESTINATION</a></li>
-        <li><a href="./starter-code/crew-commander.html">CREW</a></li>
-        <li><a href="./starter-code/technology-vehicle.html">TECHNOLOGY</a></li>
+        <li><a href="/">HOME</a></li>
+        <li><a href="/pages/destination/destination-moon.html">DESTINATION</a></li>
+        <li><a href="/pages/crew/crew-commander.html">CREW</a></li>
+        <li><a href="/pages/technology/technology-vehicle.html">TECHNOLOGY</a></li>
       </ul>
       
-      <img src="./starter-code/assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
+      <img src="/assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
     </nav>
   </header>
   <main class="container">
