--- a/pages/destination/destination-moon.html
+++ b/pages/destination/destination-moon.html
@@ -19,7 +19,7 @@
       <img src="/assets/shared/logo.svg" alt="logo">
       <ul class="nav-ul">
         <li><a  href="/index.html">HOME</a></li>
-        <li><a>DESTINATION</a></li>
+        <li><a href="">DESTINATION</a></li>
         <li><a>CREW</a></li>
         <li><a>TECHNOLOGY</a></li>
       </ul>
