--- a/pages/technology/technology-vehicle.html
+++ b/pages/technology/technology-vehicle.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/space-tourism-website-main/space-tourism-website-main/styles/technology_vehicle.css">
-  <link rel="images" href="./assets/">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+  <link rel="stylesheet" href="/styles/technology_vehicle.css">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
-  <img src="./assets/technology/background-technology-mobile.jpg" alt="bacground_technology_mobile" class="body_img">
+  <picture>
+    <source media="(min-width:768px)" srcset="/assets/technology/background-technology-tablet.jpg" class="body_img">
+    <source media="(min-width:992px)" srcset="/assets/technology/background-technology-desktop.jpg">
+    <img src="/assets/technology/background-technology-mobile.jpg" alt="bacground_technology_mobile" class="body_img">
+  </picture>
   <header>
     <nav class="head_head">
-      <img src="./assets/shared/logo.svg" alt="logo">
+      <img src="/assets/shared/logo.svg" alt="logo">
       <ul class="nav-ul">
         <li><a>HOME</a></li>
         <li><a>DESTINATION</a></li>
@@ -20,7 +23,7 @@
         <li><a>TECHNOLOGY</a></li>
       </ul>
       
-      <img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
+      <img src="/assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
     </nav>
   </header>
   <main class="container">
@@ -31,7 +34,7 @@
           <p>SPACE LAUNCH 101</p>
         </div>
         <div class="hero-img">   
-          <img src="./assets/technology/image-launch-vehicle-landscape.jpg">
+          <img src="/assets/technology/image-launch-vehicle-landscape.jpg">
         </div>
     </section>
 
