--- a/pages/crew/crew-specialist.html
+++ b/pages/crew/crew-specialist.html
@@ -12,14 +12,15 @@
   <img src="./assets/crew/background-crew-mobile.jpg" alt="bacground_crew_mobile" class="body_img">
   <header>
     <nav class="head_head">
-      <img src="./assets/shared/logo.svg" alt="logo">
+      <img src="/assets/shared/logo.svg" alt="logo">
       <ul class="nav-ul">
-        <li><a>HOME</a></li>
-        <li><a>DESTINATION</a></li>
-        <li><a>CREW</a></li>
-        <li><a>TECHNOLOGY</a></li>
+        <li><a href="/">HOME</a></li>
+        <li><a href="/pages/destination/destination-moon.html">DESTINATION</a></li>
+        <li><a href="/pages/crew/crew-commander.html">CREW</a></li>
+        <li><a href="/pages/technology/technology-vehicle.html">TECHNOLOGY</a></li>
       </ul>
-      <img src="./assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
+      
+      <img src="/assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
     </nav>
   </header>
   <main class="container">
