--- a/pages/destination/destination-moon.html
+++ b/pages/destination/destination-moon.html
@@ -18,10 +18,10 @@
     <nav class="head_head">
       <img src="/assets/shared/logo.svg" alt="logo">
       <ul class="nav-ul">
-        <li><a  href="/index.html">HOME</a></li>
-        <li><a href="">DESTINATION</a></li>
-        <li><a>CREW</a></li>
-        <li><a>TECHNOLOGY</a></li>
+        <li><a href="/">HOME</a></li>
+        <li><a href="/pages/destination/destination-moon.html">DESTINATION</a></li>
+        <li><a href="/pages/crew/crew-commander.html">CREW</a></li>
+        <li><a href="/pages/technology/technology-vehicle.html">TECHNOLOGY</a></li>
       </ul>
       
       <img src="/assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
