--- a/pages/technology/technology-vehicle.html
+++ b/pages/technology/technology-vehicle.html
@@ -17,10 +17,10 @@
     <nav class="head_head">
       <img src="/assets/shared/logo.svg" alt="logo">
       <ul class="nav-ul">
-        <li><a href="/">HOME</a></li>
-        <li><a href="/pages/destination/destination-moon.html">DESTINATION</a></li>
-        <li><a href="/pages/crew/crew-commander.html">CREW</a></li>
-        <li><a href="/pages/technology/technology-vehicle.html">TECHNOLOGY</a></li>
+        <li><a href="/" class="link-style">HOME</a></li>
+        <li><a href="/pages/destination/destination-moon.html" class="link-style">DESTINATION</a></li>
+        <li><a href="/pages/crew/crew-commander.html" class="link-style">CREW</a></li>
+        <li><a href="/pages/technology/technology-vehicle.html" class="link-style">TECHNOLOGY</a></li>
       </ul>
       
       <img src="/assets/shared/icon-hamburger.svg" alt="icon-hamburger" class="menu">
