fix nav-bar for margin top for all pages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
   <title>Frontend Mentor | Space tourism website</title>
   <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="/styles/commonstyles.css">
 </head>
 <body>
   <picture>
@@ -16,6 +17,7 @@
   <header>
     <nav class="head_head">
       <img src="/assets/shared/logo.svg" alt="logo">
+      <p class="head-border"></p>
       <ul class="nav-ul">
         <li><a href="/">HOME</a></li>
         <li><a href="/pages/destination/destination-moon.html">DESTINATION</a></li>
