--- a/pages/destination/destination-moon.html
+++ b/pages/destination/destination-moon.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href=".starter-code/assets/favicon-32x32.png">
   <link rel="stylesheet" href="/styles/destination_moon.css">
   <link rel="images" href="/starter-code/assets/">
+  <link rel="stylesheet" href="/styles/commonstyles.css">
   <title>Frontend Mentor | Space tourism website</title>
 </head> 
 <body>
@@ -17,6 +18,7 @@
   <header>
     <nav class="head_head">
       <img src="/assets/shared/logo.svg" alt="logo">
+      <p class="head-border"></p>
       <ul class="nav-ul">
         <li><a href="/">HOME</a></li>
         <li><a href="/pages/destination/destination-moon.html">DESTINATION</a></li>
