--- a/pages/technology/technology-vehicle.html
+++ b/pages/technology/technology-vehicle.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
   <link rel="stylesheet" href="/styles/technology_vehicle.css">
+  <link rel="stylesheet" href="/styles/commonstyles.css">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
@@ -16,6 +17,7 @@
   <header>
     <nav class="head_head">
       <img src="/assets/shared/logo.svg" alt="logo">
+      <p class="head-border"></p>
       <ul class="nav-ul">
         <li><a href="/" class="link-style">HOME</a></li>
         <li><a href="/pages/destination/destination-moon.html" class="link-style">DESTINATION</a></li>
@@ -42,13 +44,13 @@
       <div class="section-2">
         <div class="section-2-flex">
           <div class="section-2-sub">
-            <p>1</p>
+            <p><a href="/pages/technology/technology-vehicle.html"  class="link-style-tech">1</a></p>
           </div>
           <div class="section-2-sub section-2-sub0 ">
-            <p>2</p>
+            <p><a href="/pages/technology/technology-spaceport.html" class="link-style-tech">2</a></p>
           </div>
           <div class="section-2-sub section-2-sub0 ">
-            <p>3</p>
+            <p><a href="/pages/technology/technology-capsule.html" class="link-style-tech">3</a></p>
           </div>
         </div>
         <div class="section-2-sub1">
