--- a/pages/crew/crew-commander.html
+++ b/pages/crew/crew-commander.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
   <link rel="stylesheet" href="/styles/crew_commander_mobile.css">
+  <link rel="stylesheet" href="/styles/commonstyles.css">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
@@ -16,6 +17,7 @@
   <header>
     <nav class="head_head">
       <img src="/assets/shared/logo.svg" alt="logo">
+      <p class="head-border"></p>
       <ul class="nav-ul">
         <li><a href="/" class="link-style">HOME</a></li>
         <li><a href="/pages/destination/destination-moon.html" class="link-style">DESTINATION</a></li>
@@ -42,11 +44,19 @@
         <div class="section-2-sub">
           <div class="section-2-svg">
             <svg xmlns="http://www.w3.org/2000/svg" width="88" height="10" viewBox="0 0 88 10" fill="none">
-              <circle cx="5" cy="5" r="5" fill="white"/>
-              <circle opacity="0.174363" cx="31" cy="5" r="5" fill="white"/>
-              <circle opacity="0.174363" cx="57" cy="5" r="5" fill="white"/>
-              <circle opacity="0.174363" cx="83" cy="5" r="5" fill="white"/>
-            </svg>
+              <a xlink:href="/pages/crew/crew-commander.html">
+                  <circle  cx="5" cy="5" r="5" fill="white"/>
+              </a>
+              <a xlink:href="/pages/crew/crew-engineer.html">
+                  <circle opacity="0.174363" cx="31" cy="5" r="5" fill="white"/>
+              </a>
+              <a xlink:href="/pages/crew/crew-pilot.html">
+                  <circle opacity="0.174363" cx="57" cy="5" r="5" fill="white"/>
+              </a>
+              <a xlink:href="/pages/crew/crew-specialist.html">
+                  <circle opacity="0.174363" cx="83" cy="5" r="5" fill="white"/>
+              </a>
+          </svg>          
           </div>
         </div>
         <div class="section-2-sub1">
