--- a/pages/technology/technology-capsule.html
+++ b/pages/technology/technology-capsule.html
@@ -4,15 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/space-tourism-website-main/space-tourism-website-main/styles/technology_capsule.css">
-  <link rel="images" href="./assets/">
+  <link rel="stylesheet" href="/styles/technology_vehicle.css">
+  <link rel="stylesheet" href="/styles/commonstyles.css">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
-  <img src="./assets/technology/background-technology-mobile.jpg" alt="bacground_technology_mobile" class="body_img">
+  <picture>
+    <source media="(min-width:768px)" srcset="/assets/technology/background-technology-tablet.jpg" class="body_img">
+    <source media="(min-width:992px)" srcset="/assets/technology/background-technology-desktop.jpg">
+    <img src="/assets/technology/background-technology-mobile.jpg" alt="bacground_technology_mobile" class="body_img">
+  </picture>
   <header>
     <nav class="head_head">
       <img src="/assets/shared/logo.svg" alt="logo">
+      <p class="head-border"></p>
       <ul class="nav-ul">
         <li><a href="/">HOME</a></li>
         <li><a href="/pages/destination/destination-moon.html">DESTINATION</a></li>
@@ -31,21 +36,21 @@
           <p>SPACE LAUNCH 101</p>
         </div>
         <div class="hero-img">   
-          <img src="./assets/technology/image-space-capsule-landscape.jpg">
+          <img src="/assets/technology/image-space-capsule-landscape.jpg">
         </div>
     </section>
 
     <section>
       <div class="section-2">
         <div class="section-2-flex">
+          <div class="section-2-sub">
+            <p><a href="/pages/technology/technology-vehicle.html"  class="link-style-tech">1</a></p>
+          </div>
           <div class="section-2-sub section-2-sub0 ">
-            <p>1</p>
+            <p><a href="/pages/technology/technology-spaceport.html" class="link-style-tech">2</a></p>
           </div>
-          <div class="section-2-sub section-2-sub0">
-            <p>2</p>
-          </div>
-          <div class="section-2-sub ">
-            <p>3</p>
+          <div class="section-2-sub section-2-sub0 ">
+            <p><a href="/pages/technology/technology-capsule.html" class="link-style-tech">3</a></p>
           </div>
         </div>
         <div class="section-2-sub1">
